# wagtailmeili

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  testmanage.py  tox.ini
.github/workflows/: test.yml
src/wagtailmeili/: __init__.py  apps.py  backend.py  exceptions.py  index.py  manager.py  paginator.py  query_compiler.py  rebuilder.py  results.py  settings.py  signals.py  utils.py  version.py
src/wagtailmeili/management/commands/: cleanup_search_index.py  meilisearch_delete_all_indexes.py
src/wagtailmeili/templatetags/: meilisearch.py
src/wagtailmeili/testapp/: apps.py  manage.py  models.py  settings.py  urls.py
src/wagtailmeili/testapp/fixtures/: movies_selection.json
src/wagtailmeili/testapp/migrations/: 0001_initial.py  0002_create_moviepageindex.py  0003_reviewpage.py  0004_nonindexedmodel_nonindexedpage.py  0005_author_relatedmoviepage.py
src/wagtailmeili/tests/: conftest.py  test_backend.py  test_backend_integration.py  test_cleanup_command.py  test_index.py  test_index_cleanup.py  test_index_integration.py  test_manager.py  test_paginator.py  test_query_compiler.py  test_rebuilder_cleanup.py  test_rebuilder_integration.py  test_results.py  test_signal_handling.py  test_utils.py  test_version.py  test_wagtail_signal_behavior.py
wagtail_moviedb/: Dockerfile  manage.py  requirements.txt
wagtail_moviedb/home/: models.py
wagtail_moviedb/home/assets/: movies_selection.json
wagtail_moviedb/home/management/commands/: dump_movies.py  load_movies.py
wagtail_moviedb/home/migrations/: 0003_moviepage.py
wagtail_moviedb/wagtail_moviedb/: wsgi.py
wagtail_moviedb/wagtail_moviedb/settings/: base.py  dev.py
wagtail_moviedb/wagtail_moviedb/templates/: base.html
